--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "autosize": "^3.0.17",
     "babel-runtime": "^6.0.0",
-    "vue": "^1.0.21"
+    "vue": "^1.0.21",
+    "vue-touch": "^1.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
